GCalendarInterpreter/src/com/gcalendarinterpreter/parser/GramaticaGCalendar.txt
G = (
    NT = { <Evento>, <Titulo>, <FechaInicio>, <FechaFin>, <Ubicacion>, <Descripcion>, <Color> }
    
    T = { "new", "Evento" ":", "Titulo", "FechaInicio", "FechaFin", "Ubicacion", "Descripcion", " | ",
          STRING_LITERAL, FECHA_LITERAL, HORA_LITERAL}

    Axioma = <Evento>

    P = {
        <Evento>              ::= new Evento: <Titulo> <FechaInicio> <FechaFin> <Ubicacion> <Descripcion> <Color>
        <Titulo>              ::= Titulo: STRING_LITERAL
        <FechaInicio>         ::= FechaInicio: FECHA_LITERAL HORA_LITERAL
        <FechaFin>            ::= FechaFin: FECHA_LITERAL " | " HORA_LITERAL
        <Ubicacion>           ::= Ubicacion: STRING_LITERAL
        <Descripcion>         ::= Descripcion: STRING_LITERAL
        <String>              ::= STRING_LITERAL
        <Fecha>               ::= FECHA_LITERAL
	    <Hora>                ::= HORA_LITERAL
    }
)
